<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alvino.mavappextintor.CadastroClienteFragment">

    <EditText
        android:id="@+id/txtNome_fantasia_cadastro_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:textColor="@color/primary_text"
        android:ems="10"
        android:hint="@string/txt_nome_fantasia"
        android:inputType="textPersonName">

        <requestFocus />
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_weight="1.00"
        android:textColor="@color/primary_text"
        android:ems="10"
        android:hint="@string/txt_proprietario"
        android:id="@+id/txtProprietario_cadastro_cliente" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_weight="1.00"
        android:textColor="@color/primary_text"
        android:ems="10"
        android:hint="@string/txt_responsavel"
        android:id="@+id/txtResponsavel_cadastro_cliente" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_weight="1.00"
        android:textColor="@color/primary_text"
        android:ems="10"
        android:hint="@string/txt_telefone"
        android:id="@+id/txtPhone_cadastro_cliente"/>

    <EditText
        android:id="@+id/txtEmail_cadastro_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:textColor="@color/primary_text"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtEndereco_cadastro_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:textColor="@color/primary_text"
        android:ems="10"
        android:hint="@string/txt_endereco"
        android:inputType="textPostalAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00">

        <Button
            android:id="@+id/cancelar_cadastro_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@color/background_button"
            android:text="Cancelar" />

        <Button
            android:id="@+id/salvar_cadastro_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_button"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:width="150dp"
            android:text="Salvar" />
    </LinearLayout>

</LinearLayout>

